--- a/src/components/TermCard/TermCard.css
+++ b/src/components/TermCard/TermCard.css
@@ -1,14 +1,20 @@
 .term-card {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 8px;
 	padding: 24px;
 	border-radius: 24px;
 	background-color: #f5f5f5;
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
+}
+
+.text-wrap {
+	overflow: hidden;
 }
 
 .term-card__title {
 	margin: 0;
+	word-wrap: break-word;
 }
 
 .term-card__description {
@@ -17,11 +23,11 @@
 }
 
 .term-card__delete {
+	padding: 8px 12px;
+	width: fit-content;
 	background-color: #ff9999;
 	border: none;
-	padding: 4px 8px;
 	border-radius: 4px;
-	width: fit-content;
+	font-size: 14px;
 	cursor: pointer;
-	align-self: flex-end;
 }
